--- a/1-translate/index.html
+++ b/1-translate/index.html
@@ -7,12 +7,16 @@
     <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <h1>The Story of the Chinese Farmer</h1>
-      <h2>Is it a good thing? Is that a bad thing? I don't know.</h2>
-      <blockquote>May 11, 2016, Alexandre Gorius</blockquote>
-    </header>
     <section>
+      <header>
+        <h1>The Story of the Chinese Farmer</h1>
+        <figure>
+          <blockquote>
+            <p>Is it a good thing? Is that a bad thing? I don't know.</p>
+          </blockquote>
+          <blockquote>May 11, 2016, Alexandre Gorius</blockquote>
+        </figure>
+      </header>
       <article>
         <p>
           In nature, Good & Evil do not exist. The Universe itself is neither
@@ -28,12 +32,12 @@
           </ul>
         </article>
       </article>
-
-      <img
-        src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"
-        alt=""
-      />
-
+      <figure>
+        <img
+          src="https://cdn-images-1.medium.com/max/1000/1*2PCmLZyzQaF2pyKYkSTFpA.jpeg"
+          alt="A picture of a man holding a flashlight in his right hand to illuminate a dark, narrow hallway"
+        />
+      </figure>
       <article>
         <p>
           Up in space, turning around, looking at the earth’s face. From that
@@ -41,7 +45,119 @@
           cares about your problems. Up there, it’s just not serious, and
           there’s no such thing as an issue.
         </p>
+        <p>
+          Down here, the only reality is the one inside our brain. Nothing
+          exists if the brain doesn’t think it. Nothing exists neither if our
+          senses don’t transmit the message. That means that if we mis sense,
+          our reality changes. That’s possible because our perception is limited
+          : you can’t see at 360 degrees for example. If we mis translate the
+          message, our reality changes. If we think it in a way, our reality
+          changes depending on that way. Therefore, if we can change reality
+          that much, everything’s fake.
+        </p>
+        <p>
+          They’re proofs to that. Fall in love with someone and you’ll see that
+          person as divine. Pull yourself out of that grip and the divine falls
+          from clouds to solid ground, revealing him or herself differently. But
+          the person is the same, you just changed your mind. Everything works
+          like that : it’s not just that you can make your world, it’s that you
+          passively do it anyway.
+        </p>
+        <p>
+          They’re proofs to that. Fall in love with someone and you’ll see that
+          person as divine. Pull yourself out of that grip and the divine falls
+          from clouds to solid ground, revealing him or herself differently. But
+          the person is the same, you just changed your mind. Everything works
+          like that : it’s not just that you can make your world, it’s that you
+          passively do it anyway.
+        </p>
+      </article>
+      <figure>
+        <img
+          src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg"
+          alt=""
+        />
+        <figcaption>he Old Chinese Farmer</figcaption>
+      </figure>
+      <article>
+        <h2>The story</h2>
+
+        <p>
+          Once upon a time there was a Chinese farmer whose horse ran away. That
+          evening, all of his neighbors came around to commiserate. They said,
+          <q
+            >We are so sorry to hear your horse has run away. This is most
+            unfortunate.</q
+          >
+          The farmer said, <q>Is it good? Is it bad? I don't know.</q>
+          The next day the horse came back bringing seven wild horses with it,
+          and in the evening everybody came back and said,
+          <q
+            >Oh, isn’t that lucky. What a great turn of events. You now have
+            eight horses!</q
+          >
+          The farmer again said, <q>Is it good? Is it bad? I don't know.</q>
+        </p>
+        <p>
+          The following day his son tried to break one of the horses, and while
+          riding it, he was thrown and broke his leg. The neighbors then said,
+          <q>Oh dear, that’s too bad,</q> and the farmer responded,
+          <q>Is it good? Is it bad? I don't know.</q> The next day the
+          conscription officers came around to conscript people into the army,
+          and they rejected his son because he had a broken leg. Again all the
+          neighbors came around and said, <q>Isn’t that great!</q> Again, he
+          said, <q>Is it good? Is it bad? I don't know.</q>
+        </p>
+        <p>
+          The whole process of nature is an integrated process of immense
+          complexity, and it’s really impossible to tell whether anything that
+          happens in it is good or bad
+          <em>
+            — because you never know what will be the consequence of the
+            misfortune; or, you never know what will be the consequences of good
+            fortune.
+          </em>
+        </p>
+        <footer><blockquote>Alan Watts</blockquote></footer>
       </article>
     </section>
+    <section>
+      <article>
+        <h2>Here is this dialog in the form of a table</h2>
+        <table>
+          <tr>
+            <th>Event</th>
+            <th>Good or bad</th>
+          </tr>
+          <tr>
+            <td>Lose a horse</td>
+            <td>Maybe</td>
+          </tr>
+          <tr>
+            <td>Win more horses</td>
+            <td>Maybe</td>
+          </tr>
+          <tr>
+            <td>Son injury</td>
+            <td>Maybe</td>
+          </tr>
+          <tr>
+            Avoid war
+          </tr>
+          <td>Maybe</td>
+        </table>
+      </article>
+    </section>
+    <footer>
+      <figure>
+        <blockquote>
+          Copyright Just Another Company 2017. All right reserved. Adapted from
+          this article:
+        </blockquote>
+        <figcaption>
+          https://wellsbaum.blog/2018/01/27/alan-watts-the-story-of-the-chinese-farmer/
+        </figcaption>
+      </figure>
+    </footer>
   </body>
 </html>
