--- a/1-translate/index.html
+++ b/1-translate/index.html
@@ -19,8 +19,8 @@
         <figure>
           <blockquote>
             <p>
-              Is it a <em class="good">good</em> thing? Is that a
-              <em class="bad">bad</em> thing? I don't know.
+              Is it a <strong class="good">good</strong> thing? Is that a
+              <strong class="bad">bad</strong> thing? I don't know.
             </p>
           </blockquote>
           <blockquote>May 11, 2016, Alexandre Gorius</blockquote>
@@ -28,15 +28,15 @@
       </header>
       <article>
         <p>
-          In nature, <em class="good">Good</em> & Evil do not exist. The
-          Universe itself is neither <em class="good">good</em> nor
-          <em class="bad">bad</em>, but a potential in permanent development.
+          In nature, <em class="strong">Good</strong> & Evil do not exist. The
+          Universe itself is neither <strong class="good">good</strong> nor
+          <strong class="bad">bad</strong>, but a potential in permanent development.
         </p>
         <article>
           <p>In life, there are 4 types of people.</p>
           <ul>
             <li>
-              people who think the Internet is <em class="good">good</em>,
+              people who think the Internet is <strong class="good">good</strong>,
             </li>
             <li>people who think the Internet is evil,</li>
             <li>people who think the Internet is cats,</li>
@@ -97,54 +97,57 @@
         <p>
           Once upon a time there was a Chinese farmer whose horse ran away. That
           evening, all of his neighbors came around to commiserate. They said,
-          <q
+          <q class="villagers"
             >We are so sorry to hear your horse has run away. This is most
             unfortunate.</q
           >
           The farmer said,
-          <q
-            >Is it <em class="good">good</em>? Is it <em class="bad">bad</em>? I
+          <q class="farmer"
+            >Is it <strong class="good">good</strong>? Is it <strong class="bad">bad</strong>? I
             don't know.</q
           >
           The next day the horse came back bringing seven wild horses with it,
           and in the evening everybody came back and said,
-          <q
+          <q class="villagers"
             >Oh, isn’t that lucky. What a great turn of events. You now have
             eight horses!</q
           >
-          The farmer again said,
-          <q
-            >Is it <em class="good">good</em>? Is it <em class="bad">bad</em>? I
+          The farmer again said,Identify the quotes of the villagers and the
+          farmer by assigning each a corresponding class
+          <q class="farmer"
+            >Is it <strong class="good">good</strong>? Is it <strong class="bad">bad</strong>? I
             don't know.</q
           >
         </p>
         <p>
           The following day his son tried to break one of the horses, and while
           riding it, he was thrown and broke his leg. The neighbors then said,
-          <q>Oh dear, that’s too <em class="bad">bad</em>,</q> and the farmer
-          responded,
-          <q
-            >Is it <em class="good">good</em>? Is it <em class="bad">bad</em>? I
-            don't know.</q
+          <q class="villagers"
+            ><em>Oh dear, that’s too <strong class="bad">bad</strong>,</em></q
+          >
+          and the farmer responded,
+          <q class="farmer"
+            ><em>Is it <strong class="good">good</strong>? Is it <strong class="bad">bad</strong>? I
+            don't know.</em></q
           >
           The next day the conscription officers came around to conscript people
           into the army, and they rejected his son because he had a broken leg.
           Again all the neighbors came around and said,
-          <q>Isn’t that great!</q> Again, he said,
+          <q class="villagers"><em>Isn’t that great!</em></q> Again, he said,
           <q
-            >Is it <em class="good">good</em>? Is it <em class="bad">bad</em>? I
-            don't know.</q
+            ><em>Is it <strong class="good">good</strong>? Is it <em class="bad">bad</strong>? I
+            don't know.</em></q
           >
         </p>
         <p>
           The whole process of nature is an integrated process of immense
           complexity, and it’s really impossible to tell whether anything that
-          happens in it is <em class="good">good</em> or
-          <em class="bad">bad</em>
+          happens in it is <strong class="good">good</strong> or
+          <strong class="bad">bad</strong>
           <em>
             — because you never know what will be the consequence of the
             misfortune; or, you never know what will be the consequences of
-            <em class="good">good</em>
+            <strong class="good">good</strong>
             fortune.
           </em>
         </p>
@@ -157,7 +160,7 @@
         <table>
           <tr>
             <th>Event</th>
-            <th><em class="good">Good</em> or <em class="bad">bad</em></th>
+            <th><strong class="good">Good</strong> or <strong class="bad">bad</strong></th>
           </tr>
           <tr>
             <td>Lose a horse</td>
