quote and table

--- a/1-translate/index.html
+++ b/1-translate/index.html
@@ -27,16 +27,18 @@
         </figure>
       </header>
       <article>
-        <p>
-          In nature, <em class="strong">Good</strong> & Evil do not exist. The
+        <p class="bold">
+          In nature, <strong class="good">Good</strong> & Evil do not exist. The
           Universe itself is neither <strong class="good">good</strong> nor
-          <strong class="bad">bad</strong>, but a potential in permanent development.
+          <strong class="bad">bad</strong>, but a potential in permanent
+          development.
         </p>
         <article>
           <p>In life, there are 4 types of people.</p>
           <ul>
             <li>
-              people who think the Internet is <strong class="good">good</strong>,
+              people who think the Internet is
+              <strong class="good">good</strong>,
             </li>
             <li>people who think the Internet is evil,</li>
             <li>people who think the Internet is cats,</li>
@@ -103,8 +105,8 @@
           >
           The farmer said,
           <q class="farmer"
-            >Is it <strong class="good">good</strong>? Is it <strong class="bad">bad</strong>? I
-            don't know.</q
+            >Is it <strong class="good">good</strong>? Is it
+            <strong class="bad">bad</strong>? I don't know.</q
           >
           The next day the horse came back bringing seven wild horses with it,
           and in the evening everybody came back and said,
@@ -115,8 +117,8 @@
           The farmer again said,Identify the quotes of the villagers and the
           farmer by assigning each a corresponding class
           <q class="farmer"
-            >Is it <strong class="good">good</strong>? Is it <strong class="bad">bad</strong>? I
-            don't know.</q
+            >Is it <strong class="good">good</strong>? Is it
+            <strong class="bad">bad</strong>? I don't know.</q
           >
         </p>
         <p>
@@ -127,16 +129,20 @@
           >
           and the farmer responded,
           <q class="farmer"
-            ><em>Is it <strong class="good">good</strong>? Is it <strong class="bad">bad</strong>? I
-            don't know.</em></q
+            ><em
+              >Is it <strong class="good">good</strong>? Is it
+              <strong class="bad">bad</strong>? I don't know.</em
+            ></q
           >
           The next day the conscription officers came around to conscript people
           into the army, and they rejected his son because he had a broken leg.
           Again all the neighbors came around and said,
           <q class="villagers"><em>Isn’t that great!</em></q> Again, he said,
           <q
-            ><em>Is it <strong class="good">good</strong>? Is it <em class="bad">bad</strong>? I
-            don't know.</em></q
+            ><em
+              >Is it <strong class="good">good</strong>? Is it
+              <strong class="bad">bad</strong>? I don't know.</em
+            ></q
           >
         </p>
         <p>
@@ -160,7 +166,10 @@
         <table>
           <tr>
             <th>Event</th>
-            <th><strong class="good">Good</strong> or <strong class="bad">bad</strong></th>
+            <th>
+              <strong class="good">Good</strong> or
+              <strong class="bad">bad</strong>
+            </th>
           </tr>
           <tr>
             <td>Lose a horse</td>
@@ -178,8 +187,19 @@
             <td>Avoid war</td>
             <td>Maybe</td>
           </tr>
+          <caption>
+            Table representing the farmer's philosophy.
+          </caption>
         </table>
       </article>
+      <footer>
+        <h2>Conclusion</h2>
+        <p>
+          Conclusion Good and Bad are just one perspective. Bananas are good for
+          monkeys, but monkeys are not good for bananas. Let's not make a big
+          deal out of it...
+        </p>
+      </footer>
     </section>
     <footer>
       <figure>
