--- a/1-translate/index.html
+++ b/1-translate/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./reset.css" />
     <link href="./style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -86,7 +87,7 @@
           passively do it anyway.
         </p>
       </article>
-      <figure>
+      <figure class="gallery">
         <img
           src="https://cdn-images-1.medium.com/max/800/1*IQqkmPXYZuJViY5p-ymk0A.jpeg"
           alt="man with a turban sitting on the ground cross-legged in a picturesque hut"
@@ -173,19 +174,19 @@
           </tr>
           <tr>
             <td>Lose a horse</td>
-            <td>Maybe</td>
+            <td><em>Maybe</em></td>
           </tr>
           <tr>
             <td>Win more horses</td>
-            <td>Maybe</td>
+            <td><em>Maybe</em></td>
           </tr>
           <tr>
             <td>Son injury</td>
-            <td>Maybe</td>
+            <td><em>Maybe</em></td>
           </tr>
           <tr>
             <td>Avoid war</td>
-            <td>Maybe</td>
+            <td><em>Maybe</em></td>
           </tr>
           <caption>
             Table representing the farmer's philosophy.
