--- a/1-translate/index.html
+++ b/1-translate/index.html
@@ -43,7 +43,7 @@
             </li>
             <li>people who think the Internet is evil,</li>
             <li>people who think the Internet is cats,</li>
-            <li>people who don't think about it.</li>
+            <li class="bold">people who don't think about it.</li>
           </ul>
         </article>
       </article>
