--- a/1-translate/index.html
+++ b/1-translate/index.html
@@ -24,7 +24,7 @@
               <strong class="bad">bad</strong> thing? I don't know.
             </p>
           </blockquote>
-          <blockquote>May 11, 2016, Alexandre Gorius</blockquote>
+          <p>May 11, 2016, Alexandre Gorius</p>
         </figure>
       </header>
       <article>
